# sosecrets-rs

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yaml
examples/jwt/: .env  Cargo.toml  README.md
examples/jwt/src/: lib.rs  main.rs
scripts/: build-ver-tests.rs  check-all-features.sh  clippy-all-features.sh  package-all-features.sh  tests-all-features-1.70.sh  tests-all-features.sh
src/: lib.rs  macros.rs  runtime.rs  secret.rs  traits.rs  types.rs  utils.rs
src/runtime/: common.rs  error.rs  secret.rs  secret_sync.rs  sync_secret.rs  traits.rs
tests/: common.rs  extern_bin.rs  extern_bin_rt.rs  trybuild_tests.rs  trybuild_tests_1_70.rs  trybuild_tests_rt.rs  trybuild_tests_rt_1_70.rs
trybuild_tests/: test_cannot_return_exposed_secret.stderr  test_compile_fail_eight.rs  test_compile_fail_eight.stderr  test_compile_fail_five.rs  test_compile_fail_five.stderr  test_compile_fail_four.rs  test_compile_fail_four.stderr  test_compile_fail_nine.stderr  test_compile_fail_one.rs  test_compile_fail_one.stderr  test_compile_fail_seven.stderr  test_compile_fail_six.rs  test_compile_fail_six.stderr  test_compile_fail_ten.stderr  test_compile_fail_three.rs  test_compile_fail_three.stderr  test_compile_fail_two.rs  test_compile_fail_two.stderr  test_compile_pass_one.rs  test_compile_pass_three.rs  test_compile_pass_two.rs  test_panic_cannot_return_exposed.stderr  test_ref_cannot_leak_secret.rs  test_ref_cannot_leak_secret.stderr
trybuild_tests/1_70/: test_cannot_return_exposed_secret.rs  test_cannot_return_exposed_secret.stderr  test_compile_fail_eight.stderr  test_compile_fail_five.rs  test_compile_fail_five.stderr  test_compile_fail_four.stderr  test_compile_fail_nine.rs  test_compile_fail_nine.stderr  test_compile_fail_one.rs  test_compile_fail_one.stderr  test_compile_fail_seven.rs  test_compile_fail_seven.stderr  test_compile_fail_six.rs  test_compile_fail_six.stderr  test_compile_fail_ten.rs  test_compile_fail_three.stderr  test_compile_fail_two.rs  test_compile_fail_two.stderr  test_compile_pass_one.rs  test_panic_cannot_return_exposed.rs  test_panic_cannot_return_exposed.stderr  test_ref_cannot_leak_secret.stderr
trybuild_tests/1_70/runtime/: cannot_call_debug_clone_alloc_if_not_use.stderr  cannot_cross_unwind_if_not_copy.stderr  cannot_impl_minimally_representable_uints.rs  cannot_return_exposed_secret.stderr  u0_cannot_call_expose_secret.rs  u0_cannot_call_expose_secret.stderr
trybuild_tests/runtime/: cannot_call_debug_clone_alloc_if_not_use.rs  cannot_call_debug_clone_alloc_if_not_use.stderr  cannot_cross_unwind_if_not_copy.rs  cannot_cross_unwind_if_not_copy.stderr  cannot_impl_minimally_representable_uints.rs  cannot_impl_minimally_representable_uints.stderr  cannot_return_exposed_secret.rs  cannot_return_exposed_secret.stderr  u0_cannot_call_expose_secret.rs  u0_cannot_call_expose_secret.stderr
