[package]
name = "sosecrets-rs"
version = "0.1.0"
edition = "2021"
authors = ["Jim Chng <jimchng@outlook.com>"]
rust-version = "1.70"
readme = "README.md"
license-file = "LICENSE"
repository = "https://github.com/jymchng/sosecrets-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
typenum = "1.17.0"
zeroize = { version = "1.6.0" }

[dev-dependencies]
trybuild = "1.0.85"
