[package]
name = "sosecrets-rs"
version = "0.2.5"
edition = "2021"
authors = ["Jim Chng <jimchng@outlook.com>"]
rust-version = "1.70"
readme = "README.md"
license-file = "LICENSE"
repository = "https://github.com/jymchng/sosecrets-rs"
description = "A simple `Secret` wrapper type that reveals the secret at most `MEC: typenum::Unsigned` times with compile time guarantees."
keywords = ["security", "secrets", "exposure-control", "non-linear-types", "metaprogramming"]
categories = ["config", "no-std::no-alloc", "rust-patterns"]
exclude = [
    "tests/*",
    "trybuild_tests/*",
    "scripts/*",
    ".pre-*.yaml",
    ".github/*",
    ".gitignore"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
typenum = "^1.17.0"
zeroize = { version = "< 1.8", optional = true}

[dev-dependencies]
fs_extra = "1.3.0"
rustversion = "1.0.15"
trybuild = "1.0.85"

[features]
cloneable-secret = []
alloc = ["zeroize/alloc"]
zeroize = ["dep:zeroize"]
debug-secret = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--generate-link-to-definition", "--cfg", "docsrs"]
