[package]
name = "jwt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lib"
path = "./src/lib.rs"

[dependencies]
sosecrets-rs = { git = "https://github.com/jymchng/sosecrets-rs/", features = ["debug-secret"]}
base64 = "0.13"
crypto-common = "0.1"
digest = "0.10"
hmac = { version = "0.12", features = ["reset"] }
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jwt = "0.16.0"
dotenvy = "0.15.7"
rpassword = "7.3.1"
